--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-td{
+td {
     border: 2px solid black;
     height: 100px;
     width: 100px;
@@ -9,30 +9,42 @@ td{
 }
 
 
-table{
+table {
     border-collapse: collapse;
     position: absolute;
     left: 50%;
     margin-left: -155px;
-    top: 20%;
+    top: 20px;
 }
 
-table tr:first-child td{
+table tr:first-child td {
     border-top: 0;
 }
 
-table tr:last-child td{
+table tr:last-child td {
     border-bottom: 0;
 }
 
-table tr td:first-child{
+table tr td:first-child {
     border-left: 0;
 }
 
-table tr td:last-child{
+table tr td:last-child {
     border-right: 0;
 }
 
-.endgame{
+.endgame {
     display: none;
+    width: 200px;
+    top: 120px;
+    background-color: aqua;
+    position: absolute;
+    left: 50%;
+    margin-left: -100px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    text-align: center;
+    border-radius: 5px;
+    color: white;
+    font-size: 2em;
 }
