--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ table tr td:last-child {
 
 .option-title {
     text-align: center;
-    color: black;
+    color: royalblue;
     justify-content: center;
     margin-top: 1%;
 }
@@ -88,6 +88,10 @@ table tr td:last-child {
     font-family: 'Concert One', cursive;
     font-size: 2em;
     margin-top: 1.5%;
+}
+
+.diff-detail .title{
+    color: royalblue;
 }
 
 .level{
